--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -13,7 +13,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Notes.WebApp</RootNamespace>
-    <AssemblyName>WebApp</AssemblyName>
+    <AssemblyName>Notes.WebApp</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
