--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -99,6 +99,7 @@
     </Compile>
     <Compile Include="Models\Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\INotesRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
